// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Bold 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Bold",
}
`;

exports[`Parser Bold 2`] = `
Object {
  "ended": true,
  "items": Array [
    " test * \\\\ ",
    Object {
      "ended": true,
      "items": Array [
        "and*",
      ],
      "type": "Italic",
    },
    " so on",
  ],
  "type": "Bold",
}
`;

exports[`Parser Header 1`] = `
Object {
  "ended": true,
  "items": Array [
    " AHAHAH *test oh no* !",
  ],
  "type": "Header",
}
`;

exports[`Parser Italic 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Italic",
}
`;

exports[`Parser Italic 2`] = `
Object {
  "ended": true,
  "items": Array [
    " test _ and so on ",
    Object {
      "ended": true,
      "items": Array [
        "_test",
      ],
      "type": "Bold",
    },
  ],
  "type": "Italic",
}
`;

exports[`Parser Mono 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Mono",
}
`;

exports[`Parser Mono 2`] = `
Object {
  "ended": false,
  "items": Array [
    " test \` \\\\ _and*_ so on*",
  ],
  "type": "Mono",
}
`;

exports[`Parser Paragraph 1`] = `
Object {
  "ended": true,
  "items": Array [
    "
      AHAHAH ",
    Object {
      "ended": true,
      "items": Array [
        "test oh no",
      ],
      "type": "Bold",
    },
    " !
      go go ",
    Object {
      "ended": true,
      "items": Array [
        "power cows",
      ],
      "type": "Italic",
    },
    "
      ",
  ],
  "type": "Paragraph",
}
`;
